1999-03-16  Linus Nordberg  <linus.nordberg@canit.se>

	* gen.c: Include unistd.h for getopt.

1999-03-15  Linus Nordberg  <linus.nordberg@canit.se>

	* gen.c, stat.c, statlib.c, statlib.h: New files.
	* Makefile, ChangeLog: New files.
